--- a/ReHouse.FrontEnd/Views/Home/About.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/About.cshtml
@@ -15,7 +15,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("О компании", "about", "news")
+        @Html.ActionLink("О компании", "about", "home")
 
     </div>
 </div>
