--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="sell">
-                        <a href="#" id="">Хочу продать!</a>
+                        <a href="~/email/index" id="">Хочу продать!</a>
                     </div>
                 </div>
 
@@ -217,7 +217,7 @@
                     <h2>Ваш дом - наш успех</h2>
                 </div>
                 <div class="knowmore">
-                    <a href="#" id="#">Узнать больше</a>
+                    <a href="~/home/about">Узнать больше</a>
                 </div>
             </div>
             <div class="next"></div>
@@ -247,7 +247,7 @@
             </div>
             <div class="bottomnav">
                 <a href="~/news/index" class="">Новости</a>
-                <a href="~/home/about" class="">Контакты</a>
+                <a href="~/home/contacts" class="">Контакты</a>
                 <a href="~/map/index" class="">Карта сайта</a>
                 <a href="~/feedback/index" class="">Отзывы</a>
             </div>
