--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -166,7 +166,7 @@
             </div>
 
             <div class="sell">
-                <a href="#" id="">Хочу продать!</a>
+                <a href="~/email/index" id="">Хочу продать!</a>
             </div>
         </div>
         <div id="pagecontent">
@@ -185,7 +185,7 @@
             </div>
             <div class="bottomnav">
                 <a href="~/news/index" class="">Новости</a>
-                <a href="~/home/about" class="">Контакты</a>
+                <a href="~/home/contacts" class="">Контакты</a>
                 <a href="~/map/index" class="">Карта сайта</a>
                 <a href="~/feedback/index" class="">Отзывы</a>
             </div>
