--- a/ReHouse.FrontEnd/Content/admin.css
+++ b/ReHouse.FrontEnd/Content/admin.css
@@ -1,250 +1,309 @@
 #pagecontent h3, h2, select {
-	font-size: 16px;
+    font-size: 16px;
 }
+
 .headline h2 {
-	font-size: 18px;
+    font-size: 18px;
 }
+
 button {
-	cursor: pointer;
-	font-size: 16px;
-	    background: none;
+    cursor: pointer;
+    font-size: 16px;
+    background: none;
     color: white;
     padding: 5px;
     border: 1px solid white;
 }
-button:hover {
-    background-image: linear-gradient(to top, #797f2b 0%, #959958 13.5%, #ffffff 50%, #f9feb1 86.5%, #f6fea3 100%);
-    color: #25406a;
-    -webkit-transition: .5s ease;
-    transition: .5s ease;
-}
+
+    button:hover {
+        background-image: linear-gradient(to top, #797f2b 0%, #959958 13.5%, #ffffff 50%, #f9feb1 86.5%, #f6fea3 100%);
+        color: #25406a;
+        -webkit-transition: .5s ease;
+        transition: .5s ease;
+    }
+
 input {
-	cursor: pointer;
-	font-size: 16px;
+    cursor: pointer;
+    font-size: 16px;
 }
 
-.tabset_tabs	{ 
-	margin:0; padding:0; 
-	list-style-type:none; 
-	position:relative; 
-	z-index:2; 
-	white-space:nowrap; 
+.tabset_tabs {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    position: relative;
+    z-index: 2;
+    white-space: nowrap;
 }
-.tabset_tabs li	{ 
-	margin:0; padding:0;
-	display: flex;
-	flex-direction:column; 
-	width: 210px;  
+
+    .tabset_tabs li {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        width: 210px;
+    }
+
+    .tabset_tabs a {
+        color: white;
+        background-color: rgba(3, 2, 2, 0.6);
+        text-decoration: none;
+        padding: 0 0.6em;
+        border-left-width: 0;
+        border-bottom: none;
+        padding: 15px 0 15px 15px;
+    }
+
+        .tabset_tabs a:hover {
+            color: gold;
+            background-color: rgba(3, 2, 2, 0.4);
+            padding: 15px 0 15px 15px;
+            -webkit-transition: .5s ease;
+            transition: .5s ease;
+        }
+
+        .tabset_tabs a.active {
+            color: black;
+            background-color: white;
+            border-left-width: 1px;
+            cursor: default;
+            border-bottom: white;
+            padding-top: 1px;
+            padding-bottom: 1px;
+            padding: 15px 0 15px 20px;
+        }
+
+            .tabset_tabs a.active:before {
+                content: "➤ ";
+            }
+
+    .tabset_tabs li.firstchild a {
+        border-left-width: 1px;
+    }
+
+.tabset_content {
+    background-color: none;
+    color: white;
+    position: relative;
+    z-index: 1;
+    padding: 0.5em 1em;
+    /*display:none;*/
 }
-.tabset_tabs a	{ 
-	color:white;     
-	background-color: rgba(3, 2, 2, 0.6); 
-	text-decoration:none; 
-	padding:0 0.6em; border-left-width:0; 
-	border-bottom:none;
-	padding:15px 0 15px 15px; 
+
+.tabset_label {
+    display: none;
 }
-.tabset_tabs a:hover { 
-	color:gold; background-color: rgba(3, 2, 2, 0.4);
-	padding:15px 0 15px 15px;
-	 -webkit-transition: .5s ease;
-		transition: .5s ease;
+
+.tabset_content_active {
+    display: block;
+    width: 1350px;
 }
-.tabset_tabs a.active { 
-	color:black; background-color:white; 
-	border-left-width:1px; 
-	cursor:default; 
-	border-bottom:white; 
-	padding-top:1px; 
-	padding-bottom:1px; 
-	padding:15px 0 15px 20px; 
-}
-.tabset_tabs a.active:before {
-     content: "➤ ";
- }
-.tabset_tabs li.firstchild a { 
-	border-left-width:1px;
-}
-.tabset_content	{ 
-	background-color:none;
-	color:white; 
-	position:relative; 
-	z-index:1; 
-	padding:0.5em 1em; 
-	/*display:none;*/
-}
-.tabset_label { 
-	display:none;
-}
-.tabset_content_active	{
-	display:block;
-	width:1350px; 
-}
+
 #adminka1 {
-	/*height: 800px;*/
+    /*height: 800px;*/
 }
-@media aural{
-.tabset_content,	
-.tabset_label	{ display:block }
+
+@media aural {
+    .tabset_content,
+    .tabset_label {
+        display: block;
+    }
 }
+
 #pagecontent {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .photo_of_manager {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
-.photo_of_manager img {
-	object-fit: cover;
-}
-.photo_of_manager form {
-	height: cover;	
-	background: transparent;
-	margin-left: 4px;
-	font-family: "Century Gothic";
-	font-size: 18px;
-	font-weight: 700;
-	text-decoration: none;
-	color: white;
-}
-.photo_of_manager input {
-	margin-bottom: 5px;
-}
+
+    .photo_of_manager img {
+        object-fit: cover;
+    }
+
+    .photo_of_manager form {
+        height: cover;
+        background: transparent;
+        margin-left: 4px;
+        font-family: "Century Gothic";
+        font-size: 18px;
+        font-weight: 700;
+        text-decoration: none;
+        color: white;
+    }
+
+    .photo_of_manager input {
+        margin-bottom: 5px;
+    }
+
 .contact_info table {
-	width: 500px;
-	font-family: "Century Gothic";
-	font-size: 16px;
-	font-weight: 700;
-	text-decoration: none;
-	color: white;	
-	margin-top: 4px;
+    width: 500px;
+    font-family: "Century Gothic";
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+    color: white;
+    margin-top: 4px;
 }
-.contact_info table tr td {
-	padding: 8px;
-}
+
+    .contact_info table tr td {
+        padding: 8px;
+    }
+
 .social table {
-	width: 500px;
-	font-family: "Century Gothic";
-	font-size: 16px;
-	font-weight: 700;
-	text-decoration: none;
-	color: white;	
-	margin-top: 4px;
+    width: 500px;
+    font-family: "Century Gothic";
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+    color: white;
+    margin-top: 4px;
 }
-.social table tr {
-	border:5px solid transparent;
+
+    .social table tr {
+        border: 5px solid transparent;
+    }
+
+.header_admin {
+    width: 600px;
+    border: 1px solid white;
+    margin-top: 20px;
+    padding: 10px;
 }
-.header_admin {	
-	width: 600px;
-	border: 1px solid white;
-	margin-top: 20px;
-	padding: 10px;
+
+#adminka5 .header_admin {
+    width: 600px;
+    border: 1px solid white;
+    margin-top: 20px;
+    padding: 10px;
 }
-#adminka5 .header_admin {	
-	width: 600px;
-	border: 1px solid white;
-	margin-top: 20px;
-	padding: 10px;
-}
+
 #adminka2 .add_new {
-	margin-top: 8px;
+    margin-top: 8px;
 }
-#adminka2 .add_new div {
-	margin-bottom: 5px;
-}
+
+    #adminka2 .add_new div {
+        margin-bottom: 5px;
+    }
+
 .add_photo .photo1,
 .photo2,
 .photo3 {
-	display:flex;
-	flex-direction:row;
+    display: flex;
+    flex-direction: row;
 }
-.add_photo  div {
-	margin-bottom: 10px;
+
+.add_photo div {
+    margin-bottom: 10px;
 }
+
 .add_photo {
-	margin-top: 8px;
-	border-top:1px solid white;
-	border-bottom:1px solid white;
-	padding: 10px;
+    margin-top: 8px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 10px;
 }
-.add_photo  img {
-	margin-right: 7px;
-}
+
+    .add_photo img {
+        margin-right: 7px;
+    }
+
 table.added tr td {
-	border:1px solid white;
+    border: 1px solid white;
 }
+
 table.added .prod_info {
-	margin-top: 5px;
-	margin-left: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
 }
-table.added .prod_info h3 {
-	color: white;
-	margin-bottom: 5px; 
-}
+
+    table.added .prod_info h3 {
+        color: white;
+        margin-bottom: 5px;
+    }
+
 table.added .edit_del {
-	display: flex;
-	flex-direction: row;
-	color: white;
-	font-size: 16px bold;
+    display: flex;
+    flex-direction: row;
+    color: white;
+    font-size: 16px bold;
 }
+
 select.added_select {
-	width: 300px;
+    width: 300px;
 }
+
 input._cost_ {
-	width: 300px;
+    width: 300px;
 }
+
 textarea {
-	width: 300px;
+    width: 300px;
 }
+
 input.youtube-video {
-	width: 300px;
-	margin-top:10px;
+    width: 300px;
+    margin-top: 10px;
 }
+
 .add_button {
-	margin-top: 20px;
-	margin-bottom: 10px;
-	margin-left: 514px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 514px;
 }
+
 .added {
-	margin-top: 20px;
+    margin-top: 20px;
 }
+
 .select_photo {
-	width: 280px;
+    width: 280px;
 }
+
 .load_photo {
-	width: 134px;
+    width: 134px;
 }
+
 .added table tr td {
-	vertical-align: middle;
-	padding: 10px 40px 10px 40px;
+    vertical-align: middle;
+    padding: 10px 40px 10px 40px;
 }
+
 button.delete_all {
-	/*margin-left: 476px;*/
+    /*margin-left: 476px;*/
 }
+
 .img_news img {
-	object-fit: cover;
+    object-fit: cover;
 }
+
 .img_news {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
-.img_news input {
-    margin-bottom: 5px;
-    margin-left: 4px;
-}
+
+    .img_news input {
+        margin-bottom: 5px;
+        margin-left: 4px;
+    }
+
 .prod_info img {
-	object-fit: cover;
+    object-fit: cover;
 }
+
 button.delete_all2 {
-	margin-left: 408px;
+    margin-left: 408px;
 }
+
 .headline button {
-	margin-top: 10px;
+    margin-top: 10px;
 }
+
 .edit_del p {
-	font-size: 30px;
+    font-size: 30px;
 }
 
 /*.list_ ul li a {
@@ -267,56 +326,67 @@ button.delete_all2 {
 	transition: .2s ease;
 }*/
 .list_ ul ol {
-	display:none;
-	position:absolute;
-	left: 0px;
-	background-color: rgba(3, 2, 2, 0.6);
+    display: none;
+    position: absolute;
+    left: 0px;
+    background-color: rgba(3, 2, 2, 0.6);
     margin-left: 210px;
-	color: white;
-	width: 230px;
+    color: white;
+    width: 230px;
 }
-.list_ ul ol li a{
-	padding: 17px 0px 15px 20px;	
-	color: white;
-	font-size: 16px;
-	width: 210px;
-}
+
+    .list_ ul ol li a {
+        padding: 17px 0px 15px 20px;
+        color: white;
+        font-size: 16px;
+        width: 210px;
+    }
+
 .list_ ul li:hover > ol {
-	display:block;
-	z-index: 10000;
-	-webkit-transition: .3s ease;
-	transition: .3s ease;
+    display: block;
+    z-index: 10000;
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
 }
 
 .contact_info table select {
- 	width: 302px;
- 	background: none;
-     border: 1px solid white;
-     color: white;
- }
- .contact_info table select option {
-     background-color: #163d7d;
-     color: #ffffff;
-     font-size: 14px;
-     font-weight: 700;
-     text-transform: none;
+    width: 302px;
+    background: none;
+    border: 1px solid white;
+    color: white;
+}
+
+    .contact_info table select option {
+        background-color: #163d7d;
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: none;
     }
- .contact_info table input {
+
+.contact_info table input {
     background: none;
-     border: 1px solid white;
-     color: white;
-     width: 300px;
- }
- .contact_info table textarea {
+    border: 1px solid white;
+    color: white;
+    width: 300px;
+}
+
+.contact_info table textarea {
     background: none;
-     border: 1px solid white;
-     color: white;
-     font-size: 14px;
-     width: 294px;
- }
- .contact_info .file_upload {
- 	margin-bottom: 10px;
- }
- .contact_info button {
- 	margin-bottom: 20px;
-  } 
+    border: 1px solid white;
+    color: white;
+    font-size: 14px;
+    width: 294px;
+}
+
+.contact_info .file_upload {
+    margin-bottom: 10px;
+}
+
+.contact_info button {
+    margin-bottom: 20px;
+}
+
+.contact_info table tr td input[type="checkbox"] {
+    width: 15px;
+}
