--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -172,7 +172,7 @@
             </div>
 
             <div class="sell">
-                <a href="#" id="">Хочу продать!</a>
+                <a href="~/email/index" id="">Хочу продать!</a>
             </div>
         </div>
 
@@ -189,7 +189,7 @@
             </div>
             <div class="bottomnav">
                 <a href="~/news/index" class="">Новости</a>
-                <a href="~/home/about" class="">Контакты</a>
+                <a href="~/home/contacts" class="">Контакты</a>
                 <a href="~/map/index" class="">Карта сайта</a>
                 <a href="~/feedback/index" class="">Отзывы</a>
             </div>
