--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Profile/Index.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Profile/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="list_">
     <h2 class="tabset_label">Table of Contents</h2>
     <ul class="tabset_tabs">
-        <li class="firstchild preActive active"><a href="~/cabinet/profile">Профиль</a></li>
+        <li class="firstchild"><a class="preActive active" href="~/cabinet/profile">Профиль</a></li>
         <li>
             <a class="1">Продажа</a>
             <ol>
