--- a/ReHouse.FrontEnd/Views/Manager/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Manager/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ReHouse.FrontEnd.Models
-@*@model LoadCartModel*@
+﻿@using ReHouse.Utils.DataBase.Security
+@model List<User>
 
 <div class="navigation_string">
     <div class="way">
@@ -12,83 +12,46 @@
 </div>
 <div class="managers">
     <h2>Менеджеры</h2>
-    <div class="manager_">
-        <div class="img">
-            <img src="~/content/images/girl1.png" width="120" height="121">
-        </div>
-        <div class="contactinfo">
-            <h3>Менеджер Татьяна</h3>
-            <h3>Специалист по новостройкам</h3>
-            <h3>Контакты: тел. 09653246789</h3>
-        </div>
-        <div class="about_manager">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </div>
-
-    <div class="manager_">
-        <div class="img">
-            <img src="~/content/images/girl2.png" width="120" height="121">
-        </div>
-        <div class="contactinfo">
-            <h3>Менеджер Татьяна</h3>
-            <h3>Специалист по новостройкам</h3>
-            <h3>Контакты: тел. 09653246789</h3>
-        </div>
-        <div class="about_manager">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </div>
-    <div class="manager_">
-        <div class="img">
-            <img src="~/content/images/girl2.png" width="120" height="121">
-        </div>
-        <div class="contactinfo">
-            <h3>Менеджер Татьяна</h3>
-            <h3>Специалист по новостройкам</h3>
-            <h3>Контакты: тел. 09653246789</h3>
-        </div>
-        <div class="about_manager">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </div>
-    <div class="manager_">
-        <div class="img">
-            <img src="~/content/images/girl2.png" width="120" height="121">
-        </div>
-        <div class="contactinfo">
-            <h3>Менеджер Татьяна</h3>
-            <h3>Специалист по новостройкам</h3>
-            <h3>Контакты: тел. 09653246789</h3>
-        </div>
-        <div class="about_manager">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </div>
-    <div class="manager_">
-        <div class="img">
-            <img src="~/content/images/girl2.png" width="120" height="121">
-        </div>
-        <div class="contactinfo">
-            <h3>Менеджер Татьяна</h3>
-            <h3>Специалист по новостройкам</h3>
-            <h3>Контакты: тел. 09653246789</h3>
-        </div>
-        <div class="about_manager">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </div>
-    <div class="manager_">
-        <div class="img">
-            <img src="~/content/images/girl2.png" width="120" height="121">
-        </div>
-        <div class="contactinfo">
-            <h3>Менеджер Татьяна</h3>
-            <h3>Специалист по новостройкам</h3>
-            <h3>Контакты: тел. 09653246789</h3>
-        </div>
-        <div class="about_manager">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </div>
+    @if (Model != null && Model.Count > 0)
+    {
+        foreach (var item in Model)
+        {
+            <div class="manager_">
+                <div class="img">
+                    @if (item.Avatar != null)
+                    {
+                        <a href="/manager/profile/@item.Id">
+                            <img src="@Url.Content(item.Avatar.Url + item.Avatar.FileName)" width="120" height="121" />
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="/manager/profile/@item.Id">
+                            <img src="~/content/images/girl1.png" width="120" height="121">
+                        </a>
+                    }
+                </div>
+                <div class="contactinfo">
+                    <h3>
+                        <a href="/manager/profile/@item.Id">
+                            @item.FirstName
+                        </a>
+                    </h3>
+                    <h3>@item.Position</h3>
+                    <h3>Контакты:</h3>
+                    @if (item.Phones != null && item.Phones.Count > 0)
+                    {
+                        foreach (var phone in item.Phones)
+                        {
+                            <h3>@phone.TelePhone</h3>
+                        }
+                    }
+                    <h3>@item.Email</h3>
+                </div>
+                <div class="about_manager">
+                    <p>@item.About</p>
+                </div>
+            </div>
+        }
+    }
 </div>  
