--- a/ReHouse.FrontEnd/Views/News/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Detail.cshtml
@@ -17,7 +17,10 @@
     <h2>@Model.Title</h2>
     <div class="firstnews">
         <div class="img">
-            <img src="~/Content/images/news1.jpg" width="440" height="263">
+            @if (Model.Images != null && Model.Images.Count > 0)
+            {
+                <img src="@Url.Content(Model.Images[0].Url + Model.Images[0].FileName)" width="440" height="263">
+            }
         </div>
         <div class="content1">
             <p>@Model.Description</p>
