--- a/ReHouse.FrontEnd/Views/Vacancy/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Vacancy/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ReHouse.Utils.DataBase.Feedback
-@model List<UserFeedback>
+﻿@using ReHouse.Utils.DataBase.Vacancies
+@model List<Vacancy>
 
 
 <div class="navigation_string">
