--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/News/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/News/Edit.cshtml
@@ -27,6 +27,10 @@
         </li>
         <li><a class="3" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
         <li><a class="preActive active" href="~/cabinet/news/list">Новости</a></li>
+        <li><a class="4" href="~/cabinet/feedbacks/list">Отзывы</a></li>
+        <li><a class="4" href="~/cabinet/vacancies/list">Вакансии</a></li>
+        <li><a class="4" href="~/cabinet/builders/list">Застройщики</a></li>
+        <li><a class="4" href="~/cabinet/districts/list">Районы</a></li>
     </ul>
 </div>
 <div id="adminka1" class="tabset_content tabset_content_active">
