--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
             </div>
 
             <div class="feedback">
-                <a href="~/cart/index" id="fav">Список желаний</a>
+                <a href="~/cart/index" id="fav">Избранное</a>
                 <a href="~/email/index" id="blink">Обратный звонок</a>
             </div>
 
