--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -37,7 +37,14 @@
                     @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
                     {
                         <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                        <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                        if (item.Images != null && item.Images.Count > 0)
+                        {
+                            <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                        }
+                        else
+                        {
+                            <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
 
@@ -50,7 +57,14 @@
                     else
                     {
                         <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                        <a class="fix" href="~/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                        if (item.Images != null && item.Images.Count > 0)
+                        {
+                            <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                        }
+                        else
+                        {
+                            <a class="fix" href="~/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                             <h3>Сдам @item.Title.RussianName.ToLower()</h3>
@@ -60,11 +74,11 @@
                         </div>
                     }
 
-                    </li>
+                </li>
             }
-            </ul>
-            <a href="#" id="more">Подробнее</a>
-        </div>
+        </ul>
+        <a href="~/sale/flat" id="more">Подробнее</a>
+    </div>
     <div class="streak"></div>
 
     <div class="d-carousel" id="p">
@@ -73,13 +87,20 @@
             @foreach (var item in Model.NewBuildingAdverts)
             {
                 <li>
-                    <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                    @if (item.Images != null && item.Images.Count > 0)
+                    {
+                        <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                    }
+                    else
+                    {
+                        <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                    }
                     <div class="min-content">
-                        <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div> 
+                        <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
                         <h3>@item.Name</h3>
                         <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                         <p class="cost">от @item.Price грн/м²</p>
-                        <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>                        
+                        <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
                     </div>
                 </li>
             }
@@ -94,9 +115,16 @@
             @foreach (var item in Model.FlatSaleAdverts)
             {
                 <li>
-                    <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                    @if (item.Images != null && item.Images.Count > 0)
+                    {
+                        <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                    }
+                    else
+                    {
+                        <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                    }
                     <div class="min-content">
-                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div> 
+                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                         <h3>Продам @item.Title.RussianName.ToLower()</h3>
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
@@ -116,7 +144,14 @@
             @foreach (var item in Model.HouseSaleAdverts)
             {
                 <li>
-                    <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                    @if (item.Images != null && item.Images.Count > 0)
+                    {
+                        <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                    }
+                    else
+                    {
+                        <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                    }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                         <h3>Продам @item.Title.RussianName.ToLower()</h3>
@@ -137,7 +172,14 @@
     {
         <div class="firstnews">
             <div class="img">
-                <img src="~/Content/images/news1.jpg" width="440" height="263">
+                @if (article.Images != null && article.Images.Count > 0)
+                {
+                    <img src="@Url.Content(article.Images[0].Url + article.Images[0].FileName)" width="440" height="263"/>
+                }
+                else
+                {
+                    <img src="~/Content/images/news1.jpg" width="440" height="263">
+                }
             </div>
             <div class="content1">
                 <h3>@article.Title</h3>
@@ -155,11 +197,8 @@
             </div>
         </div>
     }
-    
+
     <div class="morenews">
         <a href="~/news/index" id="more">Все новости</a>
     </div>
 </div>
-
-
-
