--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -4,7 +4,7 @@
     <!-- Min Slider -->
     @Scripts.Render("~/bundles/slides");
     <script>
-        $(function() {
+        $(function () {
             $('#products').slides({
                 preload: true,
                 preloadImage: '',
@@ -20,7 +20,7 @@
     <!--  FancyBox -->
     @Scripts.Render("~/bundles/fancybox");
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $("a.plan").fancybox();
             // $("a.plan").fancybox({"frameWidth":1560,"frameHeight":1340});
         });
@@ -59,14 +59,34 @@
 <div id="products_example">
     <div id="products">
         <div class="slides_container">
-            <a><img src="~/Content/images/altair1.jpg" width="767" height="600" alt=""></a>
-            <a><img src="~/Content/images/altair2.jpg" width="767" height="600" alt=""></a>
-            <a><img src="~/Content/images/altair3.jpg" width="767" height="600" alt=""></a>
+            @if (Model.NewBuilding.Images != null && Model.NewBuilding.Images.Count > 0)
+            {
+                int i = 0;
+                foreach (var item in Model.NewBuilding.Images)
+                {
+                    if (i > 2)
+                    {
+                        break;
+                    }
+                    i++;
+                    <a><img src="@Url.Content(item.Url + item.FileName)" width="767" height="600" alt=""></a>
+                }
+            }
         </div>
         <ul class="pagination">
-            <li><a href="#"><img src="~/Content/images/altair1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="~/Content/images/altair2.jpg" alt=""></a></li>
-            <li><a href="#"><img src="~/Content/images/altair3.jpg" alt=""></a></li>
+            @if (Model.NewBuilding.Images != null && Model.NewBuilding.Images.Count > 0)
+            {
+                int i = 0;
+                foreach (var item in Model.NewBuilding.Images)
+                {
+                    if (i > 2)
+                    {
+                        break;
+                    }
+                    i++;
+                    <li><a href="#"><img src="@Url.Content(item.Url + item.FileName)" alt=""></a></li>
+                }
+            }
         </ul>
     </div>
 </div>
@@ -159,16 +179,19 @@
     </table>
 </div>
 <div class="planirovka">
-    <a class="plan" rel="group" title="Планировка" href="~/Content/images/plan1.jpg"><img src="~/Content/images/plan1.jpg" border="0" /></a>
-    <a class="plan" rel="group" title="Планировка" href="~/Content/images/plan1.jpg"><img src="~/Content/images/plan1.jpg" border="0" /></a>
-    <a class="plan" rel="group" title="Планировка" href="~/Content/images/plan1.jpg"><img src="~/Content/images/plan1.jpg" border="0" /></a>
-    <a class="plan" rel="group" title="Планировка" href="~/Content/images/1.jpg"><img src="~/Content/images/1.jpg" border="0" /></a>
+    @if (Model.NewBuilding.PlanImages != null && Model.NewBuilding.PlanImages.Count > 0)
+    {
+        foreach (var item in Model.NewBuilding.PlanImages)
+        {
+            <a class="plan" rel="group" title="Планировка" href="@Url.Content(item.Url + item.FileName)"><img src="@Url.Content(item.Url + item.FileName)" border="0" /></a>
+        }
+    }
 </div>
 <div class="video-youtube">
-    <iframe width="711" height="533" @*@Model.NewBuilding.YouTubeUrl*@ src="https://www.youtube.com/embed/pP9YV_P6WsM" frameborder="0" allowfullscreen></iframe>
+    <iframe width="711" height="533" src="@Model.NewBuilding.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="mapnovostroy_prod">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d101681.05935008111!2d30.6809567124572!3d46.42350678371972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0L7QtNC10YHRgdCwINC20LXQvNGH0YPQttC40L3Riw!5e0!3m2!1sru!2sua!4v1485299309010" width="1065px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed/v1/place?q=@Model.NewBuilding.Latitude,@Model.NewBuilding.Longitude&amp;key=AIzaSyDV3GzGjYIAyhiMq9Cof5SEZDuh0QeBD0Q" width="1065px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 <div class="h2novostroy"><h2>Другие Новостройки</h2></div>
 <div class="othernovostroy">
@@ -180,7 +203,14 @@
                 <div class="data-item">
                     <li>
                         <div class="redimg"><img src="~/Content/images/newred.png"></div>
-                        <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        @if (item.Images != null && item.Images.Count > 0)
+                        {
+                            <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                        }
+                        else
+                        {
+                            <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                        }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
                             <h3>@item.Name</h3>
