--- a/ReHouse.FrontEnd/Views/Shared/Vacancy/_listOfVacancies.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Vacancy/_listOfVacancies.cshtml
@@ -1,27 +1,13 @@
 ﻿@using ReHouse.Utils.DataBase.Vacancies
 @model List<Vacancy>
 
-@*@if (Model.Count > 0)
+@if (Model.Count > 0)
 {
-    foreach (var feedback in Model)
-    {*@
-<div class="call_us">
-    <p>Менеджер по продажам</p>
-</div>        
-<p>Требуются творческие люди в филиал отдела аренды коммерческой недвижимости агенства , возраст от 40 лет и выше, комфортные условия работы, дружный коллектив, обучение, индивидуальный подход к каждому сотруднику, работа в центре города. тел. (048)000-0000</p>
- <div class="call_us">
-    <p>Менеджер по продажам</p>
-</div>
-<p>Требуются творческие люди в филиал отдела аренды коммерческой недвижимости агенства , возраст от 40 лет и выше, комфортные условия работы, дружный коллектив, обучение, индивидуальный подход к каждому сотруднику, работа в центре города. тел. (048)000-0000</p>
-<div class="call_us">
-    <p>Менеджер по продажам</p>
-</div>
-<p>Требуются творческие люди в филиал отдела аренды коммерческой недвижимости агенства , возраст от 40 лет и выше, комфортные условия работы, дружный коллектив, обучение, индивидуальный подход к каждому сотруднику, работа в центре города. тел. (048)000-0000</p>
-<div class="call_us">
-    <p>Менеджер по продажам</p>
-</div>
-<p>Требуются творческие люди в филиал отдела аренды коммерческой недвижимости агенства , возраст от 40 лет и выше, комфортные условия работы, дружный коллектив, обучение, индивидуальный подход к каждому сотруднику, работа в центре города. тел. (048)000-0000</p>
-       
-
-    @*}
-}*@
+    foreach (var vacancy in Model)
+    {
+        <div class="call_us">
+            <p>@vacancy.Title</p>
+        </div>
+        <p>@vacancy.Description</p>        
+    }
+}
